--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,10 +2,17 @@
 agp = "8.2.1"
 kotlin = "1.9.22"
 core-ktx = "1.12.0"
-coroutines = "1.7.3"
 androidx-lifecycle = "2.6.1"
 appcompat = "1.6.1"
 material = "1.11.0"
+navigation = "2.6.0"
+
+# От версии kotlin зависит выбор версии компилятора Compose.
+# https://developer.android.com/jetpack/androidx/releases/compose-kotlin#pre-release_kotlin_compatibility
+compose-compiler = "1.5.10"
+compose-bom = "2024.04.00"
+
+coroutines = "1.7.3"
 
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
@@ -19,6 +26,31 @@ material = { group = "com.google.android.material", name = "material", version.r
 # androidx.lifecycle
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
+androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
+
+# region navigation
+# Navigation utilities for Compose
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation" }
+# endregion
+
+# region Jetpack Compose
+# BOM https://developer.android.com/jetpack/compose/bom/bom-mapping
+compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
+# Material Design 3
+compose-material3 = { module = "androidx.compose.material3:material3" }
+# Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
+compose-foundation = { module = "androidx.compose.foundation:foundation" }
+compose-ui = { module = "androidx.compose.ui:ui" }
+# Use only with debugImplementation
+compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
+# For annotation @Preview
+compose-ui-tooling-preveiw = { module = "androidx.compose.ui:ui-tooling-preview" }
+compose-material-icons = { module = "androidx.compose.material:material-icons-core" }
+# Add full set of material icons
+compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
+# Add window size utils
+compose-window-size = { module = "androidx.compose.material3:material3-window-size-class" }
+# endregion
 
 #coroutines
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
@@ -28,6 +60,17 @@ coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-androi
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
+
+[bundles]
+compose = [
+    "compose-material3",
+    "compose-foundation",
+    "compose-ui",
+    "compose-ui-tooling-preveiw",
+    "compose-material-icons",
+    "compose-material-icons-extended",
+    "compose-window-size"
+]
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
