--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,8 +15,10 @@ compose-bom = "2024.04.00"
 
 coroutines = "1.7.3"
 
-junit = "4.13.2"
-androidx-test-ext-junit = "1.1.5"
+# tests
+junit5-bom = "5.10.2"
+mockk = "1.13.11"
+truth = "1.4.2"
 espresso-core = "3.5.1"
 
 [libraries]
@@ -61,8 +63,13 @@ coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-androi
 kotlinx-atomicfu-plugin = { module = "org.jetbrains.kotlinx:atomicfu-gradle-plugin", version.ref = "atomicfu" }
 
 # Tests
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
+junit5-bom = { group = "org.junit", name = "junit-bom", version.ref = "junit5-bom" }
+junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api" }
+junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine" }
+junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params" }
+coroutones-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+google-truth = { module = "com.google.truth:truth", version.ref = "truth" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 
 [bundles]
@@ -74,6 +81,12 @@ compose = [
     "compose-material-icons",
     "compose-material-icons-extended",
     "compose-window-size"
+]
+test = [
+    "junit-jupiter-api",
+    "coroutones-test",
+    "mockk",
+    "google-truth"
 ]
 
 [plugins]
